// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderFooterLayout render renders correctly 1`] = `
Array [
  .c0 {
  width: 100%;
  background-color: var(--secondary-background-color);
  color: var(--secondary-text-color);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  height: min(20vh,400px);
}

.c0 .welcome-to {
  font-size: clamp(18px,1.7vw,42px);
  font-weight: 500;
  line-height: 100%;
  margin-bottom: max(-0.7vw,-10px);
}

.c0 .CoC {
  font-size: clamp(48px,4.5vw,110px);
  font-weight: 700;
  line-height: 100%;
  margin-bottom: max(-0.98vw,-18px);
  padding-right: 5px;
}

@media (max-width:1920px) {

}

@media (max-width:1440px) {

}

@media (max-width:1300px) {

}

@media (max-width:970px) {

}

@media (max-width:785px) and (min-height:501px) {

}

@media (max-height:500px) {

}

@media (max-width:320px) {

}

@media (max-width:600px) {
  .c0 .CoC {
    margin-bottom: -7px;
  }
}

@media (max-width:490px),(orientation:landscape) and (max-height:500px) {
  .c0 .welcome-to {
    display: none;
  }
}

@media (orientation:landscape) and (max-height:500px) {
  .c0 {
    height: 80px;
  }
}

<header
    className="c0"
    data-testid="header"
  >
    <h1
      className="CoC"
    >
      CARDS OF CAROUSAL
    </h1>
  </header>,
  "Test",
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  height: 122px;
  font-size: 36px;
  font-weight: 400;
  padding-right: 16px;
  padding-bottom: 2px;
  background-color: var(--secondary-background-color);
  color: var(--secondary-text-color);
}

.c0 p {
  text-align: right;
  position: relative;
}

.c0 a {
  color: var(--secondary-text-color);
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (max-width:1920px) {
  .c0 {
    height: 110px;
    font-size: 30px;
  }
}

@media (max-width:1440px) {
  .c0 {
    height: 90px;
    font-size: 26px;
  }
}

@media (max-width:1300px) {
  .c0 {
    height: 80px;
    font-size: 23px;
  }
}

@media (max-width:970px) {
  .c0 {
    text-align: center;
    height: 70px;
    font-size: 18px;
  }
}

@media (max-width:785px) and (min-height:501px) {
  .c0 {
    height: 120px;
    background-color: transparent;
  }

  .c0 p {
    text-align: center;
    font-size: 1.2rem;
    padding-bottom: 32px;
    color: var(--accent-text-color);
  }

  .c0 a {
    color: var(--accent-text-color);
    display: block;
  }
}

@media (max-height:500px) {
  .c0 {
    height: 50px;
    padding-bottom: 4px;
    padding-right: 10px;
  }

  .c0 p {
    font-size: 13px;
  }
}

@media (max-width:320px) {
  .c0 {
    font-size: 1rem;
    padding-right: 0px;
  }
}

@media (max-width:600px) {

}

@media (max-width:490px),(orientation:landscape) and (max-height:500px) {

}

@media (orientation:landscape) and (max-height:500px) {

}

<footer
    className="c0"
    data-testid="footer"
  >
    <p>
      Card content thanks to:
       
      <a
        href="https://cardsagainsthumanity.com"
      >
        https://cardsagainsthumanity.com
      </a>
    </p>
    <p>
      Made by Odin students, with love:
       
      <a
        href="https://www.theodinproject.com"
      >
        https://www.theodinproject.com
      </a>
    </p>
  </footer>,
]
`;

exports[`HeaderFooterLayout render renders correctly with the isWelcoming prop 1`] = `
Array [
  .c0 {
  width: 100%;
  background-color: var(--secondary-background-color);
  color: var(--secondary-text-color);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  height: min(20vh,400px);
}

.c0 .welcome-to {
  font-size: clamp(18px,1.7vw,42px);
  font-weight: 500;
  line-height: 100%;
  margin-bottom: max(-0.7vw,-10px);
}

.c0 .CoC {
  font-size: clamp(48px,4.5vw,110px);
  font-weight: 700;
  line-height: 100%;
  margin-bottom: max(-0.98vw,-18px);
  padding-right: 5px;
}

@media (max-width:1920px) {

}

@media (max-width:1440px) {

}

@media (max-width:1300px) {

}

@media (max-width:970px) {

}

@media (max-width:785px) and (min-height:501px) {

}

@media (max-height:500px) {

}

@media (max-width:320px) {

}

@media (max-width:600px) {
  .c0 .CoC {
    margin-bottom: -7px;
  }
}

@media (max-width:490px),(orientation:landscape) and (max-height:500px) {
  .c0 .welcome-to {
    display: none;
  }
}

@media (orientation:landscape) and (max-height:500px) {
  .c0 {
    height: 80px;
  }
}

<header
    className="c0"
    data-testid="header"
  >
    <p
      className="welcome-to"
      data-testid="welcome-text"
    >
      WELCOME TO
    </p>
    <h1
      className="CoC"
    >
      CARDS OF CAROUSAL
    </h1>
  </header>,
  "Test",
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  height: 122px;
  font-size: 36px;
  font-weight: 400;
  padding-right: 16px;
  padding-bottom: 2px;
  background-color: var(--secondary-background-color);
  color: var(--secondary-text-color);
}

.c0 p {
  text-align: right;
  position: relative;
}

.c0 a {
  color: var(--secondary-text-color);
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (max-width:1920px) {
  .c0 {
    height: 110px;
    font-size: 30px;
  }
}

@media (max-width:1440px) {
  .c0 {
    height: 90px;
    font-size: 26px;
  }
}

@media (max-width:1300px) {
  .c0 {
    height: 80px;
    font-size: 23px;
  }
}

@media (max-width:970px) {
  .c0 {
    text-align: center;
    height: 70px;
    font-size: 18px;
  }
}

@media (max-width:785px) and (min-height:501px) {
  .c0 {
    height: 120px;
    background-color: transparent;
  }

  .c0 p {
    text-align: center;
    font-size: 1.2rem;
    padding-bottom: 32px;
    color: var(--accent-text-color);
  }

  .c0 a {
    color: var(--accent-text-color);
    display: block;
  }
}

@media (max-height:500px) {
  .c0 {
    height: 50px;
    padding-bottom: 4px;
    padding-right: 10px;
  }

  .c0 p {
    font-size: 13px;
  }
}

@media (max-width:320px) {
  .c0 {
    font-size: 1rem;
    padding-right: 0px;
  }
}

@media (max-width:600px) {

}

@media (max-width:490px),(orientation:landscape) and (max-height:500px) {

}

@media (orientation:landscape) and (max-height:500px) {

}

<footer
    className="c0"
    data-testid="footer"
  >
    <p>
      Card content thanks to:
       
      <a
        href="https://cardsagainsthumanity.com"
      >
        https://cardsagainsthumanity.com
      </a>
    </p>
    <p>
      Made by Odin students, with love:
       
      <a
        href="https://www.theodinproject.com"
      >
        https://www.theodinproject.com
      </a>
    </p>
  </footer>,
]
`;
